# kotiki-engine

./: .gitignore  CMakeLists.txt  Docs.md  LICENSE  README.md
.github/workflows/: build.yml  format.yml  linter.yml
kotiki-engine/: CMakeLists.txt
kotiki-engine/include/core/movers/: mover.hpp
kotiki-engine/include/kotiki-engine/core/algorithms/: algorithm.hpp  algorithms.hpp  grid_lookup.hpp  naive.hpp
kotiki-engine/include/kotiki-engine/core/metrics/: chebyshev.hpp  euclidean.hpp  manhattan.hpp  metric.hpp  metrics.hpp  minkowski.hpp
kotiki-engine/include/kotiki-engine/core/movers/: mover.hpp  movers.hpp  random_mover.hpp  trajectory_mover.hpp
kotiki-engine/include/kotiki-engine/core/trajectory/: trajectory.hpp
kotiki-engine/include/kotiki-engine/entities/: entities_collection.hpp  entity.hpp  field.h  scene_manager.hpp  states.hpp
kotiki-engine/include/kotiki-engine/graphics/: cats_models.hpp  fps_counter.hpp  main_window.hpp  palette.hpp  settings.hpp  view.hpp
kotiki-engine/include/kotiki-engine/utils/: random.hpp  types.h
kotiki-engine/src/: main.cpp
kotiki-engine/src/kotiki-engine/: main.cpp
kotiki-engine/src/kotiki-engine/core/algorithms/: algorithm.cpp  grid_lookup.cpp  naive.cpp
kotiki-engine/src/kotiki-engine/core/metrics/: chebyshev.cpp  euclidean.cpp  minkowski.cpp
kotiki-engine/src/kotiki-engine/core/movers/: mover.cpp  random_mover.cpp  trajectory_mover.cpp
kotiki-engine/src/kotiki-engine/core/trajectory/: trajectory.cpp
kotiki-engine/src/kotiki-engine/entities/: entities_collection.cpp  scene_manager.cpp
kotiki-engine/src/kotiki-engine/graphics/: fps_counter.cpp  main_window.cpp  palette.cpp  settings.cpp  view.cpp
kotiki-engine/src/kotiki-engine/utils/: random.cpp
src/core/algorithms/: algorithm.h  algorithm.hpp
src/core/metrics/: metric.hpp
src/core/movers/: mover.hpp
src/entities/: entity.h  entity.hpp
tests/: CMakeLists.txt  test-test.cpp  test-trajectory.cpp  test_algorithm.cpp  test_entities.cpp  test_metrics.cpp
